--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <div class="game">
-      <h1 class="score">0</h1>
+      <h1 id="score"></h1>
       <canvas id="board" width="500" height="500"></canvas>
    </div>
 </body>
